feat: add websocket support